# IronPawn

./: .gitignore  CMakeLists.txt  Dockerfile  PrivacyPolicy.md  README.md  Term of Service  config.example.jsonc  run.sh
.github/workflows/: build.yml
public/: discord-sdk.js  index.html
src/: main.cpp
src/bot/: Bot.cpp  Bot.h
src/engine/: UciEngine.cpp  UciEngine.h
src/http/: LichessClient.cpp  LichessClient.h
src/platform/: DiscordPlatform.cpp  DiscordPlatform.h  IPlatform.h  LichessPlatform.cpp  LichessPlatform.h  LocalWebPlatform.cpp  LocalWebPlatform.h
